Fix flickering on iOS Safari and webkit browsers

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Mastodon Bird UI by @rolle@mementomori.social
-   v1.1.7 */
+   v1.1.7rc1 */
 
 /* CSS variables */
 :root {
@@ -1907,12 +1907,14 @@ a.status-card.compact .status-card__description {
   .app-holder > div,
   body.app-body.layout-single-column {
     overflow-x: hidden;
+    /* Fix flickering on iOS */
+    /* stylelint-disable-next-line property-no-vendor-prefix */
+    -webkit-transform: translate3d(0, 0, 0);
   }
 
   .layout-single-column .columns-area__panels__main {
     order: 1;
     position: absolute;
-    width: calc(100% - 4px);
   }
 
   .layout-single-column .columns-area__panels__pane--navigational .columns-area__panels__pane__inner {
